modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/constant_name_shadows_builtin_type.gd
const Vector2 = 0

func test():
	pass
